tests/ui/parser/keyword-impl-as-identifier.stderr
error: expected identifier, found keyword `impl`
  --> $DIR/keyword-impl-as-identifier.rs:4:9
   |
LL |     let impl = "foo";
   |         ^^^^ expected identifier, found keyword
   |
help: escape `impl` to use it as an identifier
   |
LL |     let r#impl = "foo";
   |         ++

error: aborting due to 1 previous error

